--- a/leetsandbox/Makefile
+++ b/leetsandbox/Makefile
@@ -1,5 +1,5 @@
 dev:
-	uvicorn backend.main:app --reload --host 0.0.0.0
+	uvicorn backend.main:app --reload --host 0.0.0.0 --port 8001
 
 seed:
 	python scripts/seed_neetcode.py 
